- clean up  weather - fix single column spacing

--- a/app/assets/css/_main.less
+++ b/app/assets/css/_main.less
@@ -824,10 +824,10 @@ and (max-width: 1024px) {
     }
 
     .detail {
-      font-size: 12px;
+      font-size: 11px;
       display: inline;
-      padding-left: 6px;
-      padding-right: 6px;
+      padding-left: 5px;
+      padding-right: 5px;
 
       .direction {
         display: inline;
@@ -848,6 +848,7 @@ and (max-width: 1024px) {
 
         .icon {
           padding-bottom: 0px;
+          height: 30px;
         }
 
         i {
